objects/Budget__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AddressNumber__c</fullName>
        <label>Address Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetAmount_EUR__c</fullName>
        <label>Budget_Amount_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetAmount_LOCAL__c</fullName>
        <label>Budget_Amount_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetCYFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget_CY_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BudgetCode__c</fullName>
        <label>Budget Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetCostAmount_EUR__c</fullName>
        <label>Budget_Cost_Amount_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetCostAmount_LOCAL__c</fullName>
        <label>Budget_Cost_Amount_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetItemDescription__c</fullName>
        <label>Budget Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetKey__c</fullName>
        <externalId>true</externalId>
        <label>Budget Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BudgetLYFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget_LY_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BudgetLYMTDFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget_LY_MTD_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BudgetLYYTDFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget_LY_YTD_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BudgetMTDFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget_MTD_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BudgetMarginAmount_EUR__c</fullName>
        <label>Budget_Margin_Amount_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetMarginAmount_LOCAL__c</fullName>
        <label>Budget_Margin_Amount_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <label>Budget Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BudgetQuantityWT__c</fullName>
        <label>Budget Quantity (WT)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetYTDFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget_YTD_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BusinessUnitNumber__c</fullName>
        <label>Business Unit Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyNumber__c</fullName>
        <label>Company Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMCDCompany__c</fullName>
        <description>IMCD Company this Budget record is related too</description>
        <label>IMCD Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IMCDCompany</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncomeTypeCode__c</fullName>
        <label>Income Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemFullSegmentNumber__c</fullName>
        <label>Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB1__c</fullName>
        <label>IMCD_LOB_Group1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB2__c</fullName>
        <label>IMCD_LOB_Group2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB3__c</fullName>
        <label>IMCD_LOB_Group3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonthStartDate__c</fullName>
        <label>Month Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrincipalName__c</fullName>
        <formula>IF (ProductPrincipal__c &lt;&gt; null, ProductPrincipal__r.Name, Product__r.Principal__r.Name)</formula>
        <label>Principal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductItemNr__c</fullName>
        <inlineHelpText>(Only applicable for Budget Items)</inlineHelpText>
        <label>Product Item Nr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductPrincipal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product&apos;s Principal</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budgets (Product&apos;s Principal)</relationshipLabel>
        <relationshipName>Budgets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductShortNumber__c</fullName>
        <label>Short Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesmanName__c</fullName>
        <label>Salesman Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesmanNumber__c</fullName>
        <label>Salesman Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Budget</label>
    <nameField>
        <displayFormat>BT{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>